# scope-classifier

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: candidates_v1_ops.jsonl
data/labels/: v1.jsonl
data/splits/v1/: meta.json  test.jsonl  train.jsonl  val.jsonl
experiments/: v1_baseline.md
runs/: README.md
runs/deberta-v3-xlarge-korean/: epoch_metrics.json  metrics.json  train_summary.json
runs/klue-bert-base/: epoch_metrics.json  metrics.json  train_summary.json
runs/klue-roberta-large/: epoch_metrics.json  metrics.json  train_summary.json
src/scope_dataset/: __init__.py  collect_videos.py  inspect_labels.py  label_with_codex.py  preprocess.py  preprocessing.py  prompt.py  train.py  upload_to_hf.py  writer.py
tests/: test_preprocessing.py  test_prompt_and_writer.py
