[project]
name = "scope-classifier"
version = "0.1.0"
description = "유튜브 영상 제목·설명 기반 비교영상 분류 데이터셋 + 분류기 (KLUE-BERT distillation)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Moabom Team" },
]
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
hf = [
    "datasets>=2.16",
    "huggingface-hub>=0.20",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/moabom-official/scope-classifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_dataset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
